@@ -512,7 +512,8 @@ cmd_bfin_help (void)
 
 static void
 cmd_bfin_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                   const char *text, size_t text_len, size_t token_point)
+                   char * const *tokens, const char *text, size_t text_len,
+                   size_t token_point)
 {
     if (token_point != 1)
         return;
