@@ -133,7 +133,8 @@ cmd_debug_help (void)
 
 static void
 cmd_debug_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                    const char *text, size_t text_len, size_t token_point)
+                    char * const *tokens, const char *text, size_t text_len,
+                    size_t token_point)
 {
     if (token_point != 1)
         return;
