@@ -67,7 +67,8 @@ cmd_initbus_help (void)
 
 static void
 cmd_initbus_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                      const char *text, size_t text_len, size_t token_point)
+                      char * const *tokens, const char *text, size_t text_len,
+                      size_t token_point)
 {
     size_t i;
 
