@@ -96,7 +96,8 @@ cmd_salias_help (void)
 
 static void
 cmd_salias_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
-                     const char *text, size_t text_len, size_t token_point)
+                     char * const *tokens, const char *text, size_t text_len,
+                     size_t token_point)
 {
     if (token_point != 2)
         return;
